# Lychee-NSFW-Classification

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: CICD.yaml  scorecard.yml
app/: config.py  main.py
app/api/: dependencies.py  routes.py  schemas.py
app/config/: __init__.py  labels.py  models.py  presets.py  settings.py
app/detection/: detector.py
app/queue/: base.py  db_queue.py  factory.py  redis_queue.py  worker.py
docs/: Contribute.md  README.md
docs/0-overview/: README.md
docs/1-concepts/: README.md
docs/2-how-to/: README.md  choose-a-preset.md  deploy-with-docker.md  tune-thresholds.md
docs/3-reference/: README.md  api.md  coding-conventions.md  configuration.md  openapi.json
tests/: test_classify.py  test_presets.py  test_routes.py  test_schemas.py
