[project]
name = "lychee-nsfw-classification"
version = "0.1.0"
description = "Lychee NSFW Classification – content moderation microservice"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "nudenet>=3.4.2",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0",
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "httpx2>=2.4.0",
    "ty>=0.0.49",
    "pytest>=8.0.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=1.4.0",
    "anyio>=4.7",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff – linting and formatting
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific rules
]
ignore = [
    "B008",   # FastAPI requires Depends() calls in function default arguments
    "ANN401", # typing.Any needed for raw NudeNet return type annotations
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# ty – type checking
# ---------------------------------------------------------------------------
[tool.ty]
# ty inherits Python version from requires-python

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
